--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,24 +1,21 @@
 name: Deploy Next.js site to GitHub Pages
 
 on:
-  # Runs on pushes targeting the main branch
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '18.17.0'
 
       - name: Install dependencies
         run: npm install  # Or yarn install if you use Yarn
@@ -31,5 +28,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./out  # Specify the directory where Next.js builds to
-          publish_branch: main
-
+          publish_branch: gh-pages  # Branch to deploy to
