--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           publish_dir: .next  # Specify the directory where Next.js builds to
           publish_branch: gh-pages
